--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ a {
 .container {
 	width: 50%;
 	border-radius: 30px;
+	max-height: 80vh;
 	padding: 2rem;
 	display: flex;
 	align-items: center;
@@ -24,6 +25,7 @@ a {
 	box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4), 0 0 50px rgba(0, 0, 0, 0.3);
 	background: rgba(255, 255, 255, 0.25);
 	backdrop-filter: blur(10px);
+
 	-webkit-backdrop-filter: blur(10px);
 }
 .card {
@@ -78,4 +80,22 @@ a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+@media (max-width: 768px) {
+	.title h1 {
+		font-size: 2rem;
+	}
+	.icon,
+	.link {
+		min-width: 50px;
+		min-height: 50px;
+		padding: 1rem;
+	}
+	.backButton {
+		left: 1.5rem;
+		font-size: 1.5rem;
+		height: 50px;
+		width: 50px;
+	}
 }
